# QFRCScouter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Schedule.qrc  getSchedule.sh  schedule.json  schedule.tsv
.github/workflows/: build.yml  trigger_release.yml
android/: AndroidManifest.xml
include/: AutoScouting.h  BetterSlider.h  BetterSpinBox.h  MainWindow.h  MatchData.h  Notes.h  QRCode.h  Scale.h  SubjectiveScales.h  TeamInfo.h  TeleScouting.h  WelcomePage.h
program_info/: CMakeLists.txt  QFRCScouter.desktop.in  QFRCScouter.manifest.in  QFRCScouter.rc.in  genicons.sh
src/: AutoScouting.cpp  BetterSlider.cpp  BetterSpinBox.cpp  MainWindow.cpp  MatchData.cpp  Notes.cpp  QRCode.cpp  Scale.cpp  SubjectiveScales.cpp  TeamInfo.cpp  TeleScouting.cpp  WelcomePage.cpp  main.cpp
tba/: 2024_matches.csv  CMakeLists.txt  Match.cpp  Match.h  Schedule.cpp  Schedule.h  main.cpp
ui/: AutoScouting.ui  BetterSlider.ui  BetterSpinBox.ui  MainWindow.ui  Notes.ui  QRCode.ui  Scale.ui  SubjectiveScales.ui  TeamInfo.ui  TeleScouting.ui  WelcomePage.ui
